#176 Fixed header button alignment

--- a/src/app/shared/components/header/header.component.less
+++ b/src/app/shared/components/header/header.component.less
@@ -13,12 +13,15 @@ nz-header {
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  height: 100%;
 
   > h1 {
     color: @white-text;
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
+    margin: 0;
   }
 
   > div {
@@ -32,6 +35,10 @@ nz-header {
 
   > div :not(:last-child) {
     margin-right: @spacing16;
+  }
+
+  div {
+    line-height: 0;
   }
 }
 
